feat(events): UI theme overhaul, Find Room card, active timetable auto-fetch, and backend copy-on-execute fix